--- a/English.lproj/CommitSheet.xib
+++ b/English.lproj/CommitSheet.xib
@@ -1740,19 +1740,27 @@ ARcABAAAAAEAAAACARwAAwAAAAEAAQAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
         </object>
         <object class="IBConnectionRecord">
           <object class="IBOutletConnection" key="connection">
-            <string key="label">detailedDiffWebView</string>
-            <reference key="source" ref="296581420"/>
-            <reference key="destination" ref="117732061"/>
-          </object>
-          <int key="connectionID">398</int>
-        </object>
-        <object class="IBConnectionRecord">
-          <object class="IBOutletConnection" key="connection">
             <string key="label">commitFilesViewer</string>
             <reference key="source" ref="1001"/>
             <reference key="destination" ref="296581420"/>
           </object>
           <int key="connectionID">399</int>
+        </object>
+        <object class="IBConnectionRecord">
+          <object class="IBOutletConnection" key="connection">
+            <string key="label">parentController</string>
+            <reference key="source" ref="117732061"/>
+            <reference key="destination" ref="296581420"/>
+          </object>
+          <int key="connectionID">400</int>
+        </object>
+        <object class="IBConnectionRecord">
+          <object class="IBOutletConnection" key="connection">
+            <string key="label">detailedPatchesWebView</string>
+            <reference key="source" ref="296581420"/>
+            <reference key="destination" ref="117732061"/>
+          </object>
+          <int key="connectionID">401</int>
         </object>
       </array>
       <object class="IBMutableOrderedSet" key="objectRecords">
@@ -2480,6 +2488,7 @@ ARcABAAAAAEAAAACARwAAwAAAAEAAQAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
         <string key="316.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
         <string key="317.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
         <string key="318.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+        <string key="322.CustomClassName">PatchesWebview</string>
         <string key="322.IBPluginDependency">com.apple.WebKitIBPlugin</string>
         <object class="NSAffineTransform" key="322.IBViewBoundsToFrameTransform">
           <bytes key="NSTransformStruct">AT+AAAA/gAAAA</bytes>
@@ -2560,7 +2569,7 @@ ARcABAAAAAEAAAACARwAAwAAAAEAAQAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
       <nil key="activeLocalization"/>
       <dictionary class="NSMutableDictionary" key="localizations"/>
       <nil key="sourceID"/>
-      <int key="maxID">399</int>
+      <int key="maxID">401</int>
     </object>
     <object class="IBClassDescriber" key="IBDocument.Classes">
       <array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -2777,7 +2786,7 @@ ARcABAAAAAEAAAACARwAAwAAAAEAAQAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
           </dictionary>
           <dictionary class="NSMutableDictionary" key="outlets">
             <string key="contextualMenuForFSViewerPane">NSMenu</string>
-            <string key="detailedDiffWebView">WebView</string>
+            <string key="detailedPatchesWebView">PatchesWebview</string>
             <string key="parentController">id</string>
           </dictionary>
           <dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
@@ -2785,9 +2794,9 @@ ARcABAAAAAEAAAACARwAAwAAAAEAAQAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
               <string key="name">contextualMenuForFSViewerPane</string>
               <string key="candidateClassName">NSMenu</string>
             </object>
-            <object class="IBToOneOutletInfo" key="detailedDiffWebView">
-              <string key="name">detailedDiffWebView</string>
-              <string key="candidateClassName">WebView</string>
+            <object class="IBToOneOutletInfo" key="detailedPatchesWebView">
+              <string key="name">detailedPatchesWebView</string>
+              <string key="candidateClassName">PatchesWebview</string>
             </object>
             <object class="IBToOneOutletInfo" key="parentController">
               <string key="name">parentController</string>
@@ -2897,6 +2906,25 @@ ARcABAAAAAEAAAACARwAAwAAAAEAAQAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
         <object class="IBPartialClassDescription">
           <string key="className">NSWindow</string>
           <reference key="sourceIdentifier" ref="1018491652"/>
+        </object>
+        <object class="IBPartialClassDescription">
+          <string key="className">PatchesWebview</string>
+          <string key="superclassName">WebView</string>
+          <object class="NSMutableDictionary" key="outlets">
+            <string key="NS.key.0">parentController</string>
+            <string key="NS.object.0">id</string>
+          </object>
+          <object class="NSMutableDictionary" key="toOneOutletInfosByName">
+            <string key="NS.key.0">parentController</string>
+            <object class="IBToOneOutletInfo" key="NS.object.0">
+              <string key="name">parentController</string>
+              <string key="candidateClassName">id</string>
+            </object>
+          </object>
+          <object class="IBClassDescriptionSource" key="sourceIdentifier">
+            <string key="majorKey">IBProjectSource</string>
+            <string key="minorKey">Classes/PatchesModel/PatchesWebview.h</string>
+          </object>
         </object>
         <object class="IBPartialClassDescription">
           <string key="className">ShowResizeUpDownCursorView</string>
